// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home Component home screen rendering with activities 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "padding": 15,
      }
    }
  >
    <View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 0,
              "justifyContent": "center",
            },
            Object {
              "backgroundColor": "white",
              "borderRadius": 3,
              "height": 96,
              "width": 96,
            },
          ]
        }
      >
        <Image
          resizeMode="cover"
          source={
            Object {
              "testUri": "../../../images/default_profile_image.png",
            }
          }
          style={
            Array [
              Object {
                "borderRadius": 3,
                "height": 96,
                "width": 96,
              },
              Object {
                "position": "absolute",
              },
              Array [
                Object {
                  "borderRadius": 3,
                  "height": 96,
                  "width": 96,
                },
                undefined,
              ],
            ]
          }
        />
      </View>
    </View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "rgba(74,74,74,1)",
            "fontFamily": "NunitoSans-Bold",
            "fontSize": 24,
            "lineHeight": 33,
            "textAlign": "center",
          },
          Object {
            "flex": 1,
            "marginLeft": 24,
            "paddingLeft": 2,
            "textAlign": "left",
          },
        ]
      }
    >
      Bob
    </Text>
  </View>
  <View
    style={
      Object {
        "elevation": 8,
        "flex": 0,
        "flexDirection": "column",
        "justifyContent": "flex-start",
      }
    }
  >
    <View>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        collapsable={undefined}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#FFFFFF",
              "borderBottomWidth": 1,
              "borderColor": "rgba(216,216,216,1)",
              "flexDirection": "row",
              "padding": 28,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "borderColor": "rgba(130,130,130,1)",
                "borderRadius": 19,
                "borderWidth": 2,
                "height": 38,
                "justifyContent": "center",
                "width": 38,
              }
            }
          >
            <Icon
              color="rgba(130,130,130,1)"
              name="md-information"
              size={33}
              style={
                Object {
                  "height": 33,
                }
              }
            />
          </View>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "rgba(74,74,74,1)",
                "flexGrow": 1,
                "fontFamily": "NunitoSans-Regular",
                "fontSize": 20,
                "lineHeight": 27,
                "marginLeft": 13,
              }
            }
          >
            Identity
          </Text>
          <Icon
            color="rgba(216,216,216,1)"
            name="ios-arrow-forward-outline"
            size={20}
            style={Object {}}
          />
        </View>
      </View>
    </View>
    <View>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        collapsable={undefined}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#FFFFFF",
              "borderBottomWidth": 1,
              "borderColor": "rgba(216,216,216,1)",
              "flexDirection": "row",
              "padding": 28,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "borderColor": "rgba(130,130,130,1)",
                "borderRadius": 19,
                "borderWidth": 2,
                "height": 38,
                "justifyContent": "center",
                "width": 38,
              }
            }
          >
            <Icon
              color="rgba(130,130,130,1)"
              name="ios-checkmark"
              size={33}
              style={
                Object {
                  "height": 32,
                }
              }
            />
          </View>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "rgba(74,74,74,1)",
                "flexGrow": 1,
                "fontFamily": "NunitoSans-Regular",
                "fontSize": 20,
                "lineHeight": 27,
                "marginLeft": 13,
              }
            }
          >
            Verifications
          </Text>
          <Icon
            color="rgba(216,216,216,1)"
            name="ios-arrow-forward-outline"
            size={20}
            style={Object {}}
          />
        </View>
      </View>
    </View>
    <View>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        collapsable={undefined}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#FFFFFF",
              "borderBottomWidth": 1,
              "borderColor": "rgba(216,216,216,1)",
              "flexDirection": "row",
              "padding": 28,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "borderColor": "rgba(130,130,130,1)",
                "borderRadius": 19,
                "borderWidth": 2,
                "height": 38,
                "justifyContent": "center",
                "width": 38,
              }
            }
          >
            <Icon
              color="rgba(130,130,130,1)"
              name="user-o"
              size={22}
              style={
                Object {
                  "height": 24,
                }
              }
            />
          </View>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "rgba(74,74,74,1)",
                "flexGrow": 1,
                "fontFamily": "NunitoSans-Regular",
                "fontSize": 20,
                "lineHeight": 27,
                "marginLeft": 13,
              }
            }
          >
            Accounts
          </Text>
          <Icon
            color="rgba(216,216,216,1)"
            name="ios-arrow-forward-outline"
            size={20}
            style={Object {}}
          />
        </View>
      </View>
    </View>
  </View>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    collapsable={undefined}
    hasTVPreferredFocus={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "rgba(92,80,202,1)",
        "borderRadius": 28,
        "bottom": 24,
        "elevation": 10,
        "height": 56,
        "opacity": 1,
        "padding": 16,
        "position": "absolute",
        "right": 347,
        "shadowColor": "rgb(0,0,0)",
        "shadowOffset": Object {
          "height": 2,
          "width": 1,
        },
        "shadowOpacity": 0.3,
        "width": 56,
      }
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <Icon
      color="rgba(216,216,216,1)"
      name="qrcode-scan"
      size={24}
    />
  </View>
</View>
`;

exports[`Home Component home screen rendering without activities 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "padding": 15,
      }
    }
  >
    <View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 0,
              "justifyContent": "center",
            },
            Object {
              "backgroundColor": "white",
              "borderRadius": 3,
              "height": 96,
              "width": 96,
            },
          ]
        }
      >
        <Image
          resizeMode="cover"
          source={
            Object {
              "uri": "/ipfs/avatar",
            }
          }
          style={
            Array [
              Object {
                "borderRadius": 3,
                "height": 96,
                "width": 96,
              },
              Object {
                "position": "absolute",
              },
              Array [
                Object {
                  "borderRadius": 3,
                  "height": 96,
                  "width": 96,
                },
                undefined,
              ],
            ]
          }
        />
      </View>
    </View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "rgba(74,74,74,1)",
            "fontFamily": "NunitoSans-Bold",
            "fontSize": 24,
            "lineHeight": 33,
            "textAlign": "center",
          },
          Object {
            "flex": 1,
            "marginLeft": 24,
            "paddingLeft": 2,
            "textAlign": "left",
          },
        ]
      }
    >
      Alice
    </Text>
  </View>
  <View
    style={
      Object {
        "elevation": 8,
        "flex": 0,
        "flexDirection": "column",
        "justifyContent": "flex-start",
      }
    }
  >
    <View>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        collapsable={undefined}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#FFFFFF",
              "borderBottomWidth": 1,
              "borderColor": "rgba(216,216,216,1)",
              "flexDirection": "row",
              "padding": 28,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "borderColor": "rgba(130,130,130,1)",
                "borderRadius": 19,
                "borderWidth": 2,
                "height": 38,
                "justifyContent": "center",
                "width": 38,
              }
            }
          >
            <Icon
              color="rgba(130,130,130,1)"
              name="md-information"
              size={33}
              style={
                Object {
                  "height": 33,
                }
              }
            />
          </View>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "rgba(74,74,74,1)",
                "flexGrow": 1,
                "fontFamily": "NunitoSans-Regular",
                "fontSize": 20,
                "lineHeight": 27,
                "marginLeft": 13,
              }
            }
          >
            Identity
          </Text>
          <Icon
            color="rgba(216,216,216,1)"
            name="ios-arrow-forward-outline"
            size={20}
            style={Object {}}
          />
        </View>
      </View>
    </View>
    <View>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        collapsable={undefined}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#FFFFFF",
              "borderBottomWidth": 1,
              "borderColor": "rgba(216,216,216,1)",
              "flexDirection": "row",
              "padding": 28,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "borderColor": "rgba(130,130,130,1)",
                "borderRadius": 19,
                "borderWidth": 2,
                "height": 38,
                "justifyContent": "center",
                "width": 38,
              }
            }
          >
            <Icon
              color="rgba(130,130,130,1)"
              name="ios-checkmark"
              size={33}
              style={
                Object {
                  "height": 32,
                }
              }
            />
          </View>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "rgba(74,74,74,1)",
                "flexGrow": 1,
                "fontFamily": "NunitoSans-Regular",
                "fontSize": 20,
                "lineHeight": 27,
                "marginLeft": 13,
              }
            }
          >
            Verifications
          </Text>
          <Icon
            color="rgba(216,216,216,1)"
            name="ios-arrow-forward-outline"
            size={20}
            style={Object {}}
          />
        </View>
      </View>
    </View>
    <View>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        collapsable={undefined}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#FFFFFF",
              "borderBottomWidth": 1,
              "borderColor": "rgba(216,216,216,1)",
              "flexDirection": "row",
              "padding": 28,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "borderColor": "rgba(130,130,130,1)",
                "borderRadius": 19,
                "borderWidth": 2,
                "height": 38,
                "justifyContent": "center",
                "width": 38,
              }
            }
          >
            <Icon
              color="rgba(130,130,130,1)"
              name="user-o"
              size={22}
              style={
                Object {
                  "height": 24,
                }
              }
            />
          </View>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "rgba(74,74,74,1)",
                "flexGrow": 1,
                "fontFamily": "NunitoSans-Regular",
                "fontSize": 20,
                "lineHeight": 27,
                "marginLeft": 13,
              }
            }
          >
            Accounts
          </Text>
          <Icon
            color="rgba(216,216,216,1)"
            name="ios-arrow-forward-outline"
            size={20}
            style={Object {}}
          />
        </View>
      </View>
    </View>
  </View>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    collapsable={undefined}
    hasTVPreferredFocus={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "rgba(92,80,202,1)",
        "borderRadius": 28,
        "bottom": 24,
        "elevation": 10,
        "height": 56,
        "opacity": 1,
        "padding": 16,
        "position": "absolute",
        "right": 347,
        "shadowColor": "rgb(0,0,0)",
        "shadowOffset": Object {
          "height": 2,
          "width": 1,
        },
        "shadowOpacity": 0.3,
        "width": 56,
      }
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <Icon
      color="rgba(216,216,216,1)"
      name="qrcode-scan"
      size={24}
    />
  </View>
</View>
`;
